# haploqtl

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: AccessionRename.txt  README.md  eb9_phenotypes.csv
evals/: README.md  RESULTS.md  __init__.py  harness.py  items.jsonl  live.py  providers.py  run.py  verifiers.py
evals/haploqtl_bench/: README.md  bench.py  dataset.jsonl  generate.py
examples/: finemap_eb5.py  finemap_eb9.py
legacy/: README.md  cluster_haplotypes.py
scripts/: run_demo.sh
skills/qtl-candidate-gene/: EXAMPLE.md  SKILL.md  requirements.txt
skills/qtl-candidate-gene/data/: ITAG4.1_EB_regions.gff3
skills/qtl-candidate-gene/references/: data-sources.md  interpretation-guide.md
skills/qtl-candidate-gene/scripts/: cite_support.py  diagnostic_variants.py  gene_function.py  genes_in_interval.py  pubmed.py  verify_report.py
src/haploqtl/: __init__.py  __main__.py  accessions.py  cli.py  cluster.py  contrast.py  introgression.py  io.py  markers.py  painting.py  windows.py
tests/: conftest.py  test_cli.py  test_cluster.py  test_clustering_legacy_equivalence.py  test_contrast_equivalence.py  test_eval_bench.py  test_evals_harness_mock.py  test_evals_retrieval.py  test_evals_verifiers.py  test_finemap_eb5.py  test_finemap_eb9.py  test_introgression.py  test_legacy_baseline.py  test_painting.py  test_skill_diagnostic.py  test_skill_gene_function.py  test_skill_genes.py  test_skill_verify.py  test_smoke.py  test_windows.py
tests/fixtures/: eb5_clusters_finemap.csv  eb9_clusters_finemap.csv  eb9_clusters_subset.csv  eb9_contrast_golden.csv
tests/r/: contrast_reference.R
