[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haploqtl"
version = "0.10.0"
description = "Typed, tested local-ancestry inference for fine-mapping QTL and predicting trait donors, with a grounded candidate-gene interpretation skill and an evaluation harness."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Taylor A. Anderson", email = "tayloranthonyanderson@gmail.com" }]
keywords = [
    "bioinformatics",
    "genomics",
    "local-ancestry",
    "QTL",
    "haplotype",
    "introgression",
    "plant-breeding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "scikit-allel>=1.3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.8"]
eval = ["anthropic>=0.40"] # live eval runs only (the harness/CI are provider-agnostic)

[project.scripts]
haploqtl = "haploqtl.cli:main"

[project.urls]
Homepage = "https://github.com/tayloranthonyanderson/haploqtl"
"Source paper" = "https://doi.org/10.1111/tpj.16495"
"Original implementation" = "https://github.com/masudermann/HaplotypeAnalysis_Visualization"

[tool.hatch.build.targets.wheel]
packages = ["src/haploqtl"]

[tool.ruff]
line-length = 100
extend-exclude = ["legacy", "data", "output"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"] # line length is handled by the formatter

[tool.mypy]
python_version = "3.12"
files = ["src/haploqtl", "evals"]
ignore_missing_imports = true # scikit-allel and scikit-learn ship no type stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."] # so tests/ can import the top-level evals/ package
